# DownSampleMe

./: .gitignore  CITATION.cff  LICENSE  README.md  output.txt  project_FINAL.xpr  vivado.jou
Algorithm Verification/: CMakeLists.txt  main.c
CSD-Sem-5-Processor-Design-Project-main/: ImageDownSample.xpr
Control LUT/: control_lut.ipynb  inst_ram.txt  instruction_definitions.txt  next_add.txt
ISA/DataPath/: README.md
Image Generation/: EN3030_Processor_Design.ipynb  baboon.txt  dummy_img.txt  image.ipynb  image.txt  lenna.txt  peppers.txt
Image Generation/.ipynb_checkpoints/: gen_image-checkpoint.py  image-checkpoint.ipynb
Micro Instructions/: FPGA-microinstructions-cu.docx  FPGA-microinstructions-full.docx  FPGA-microinstructions.docx
Processor/: Processor.xpr
Processor-prev-versions/Project20220710/: project_1.xpr
Processor-prev-versions/Vivado project Errors Fixed/: project_FINAL.xpr  vivado_16272.backup.jou
Processor-prev-versions/project_final_128x128/: project_final_128x128.xpr
Processor-prev-versions/project_final_4x4/: project_new.xpr
Processor/Processor.cache/wt/: webtalk_pa.xml
Processor/Processor.runs/synth_1/: gen_run.xml
Project20220710/project_1.runs/synth_1/: gen_run.xml
Vivado project Errors Fixed/: project_FINAL.xpr  vivado.jou  vivado_13080.backup.jou  vivado_6620.backup.jou  vivado_9232.backup.jou
Vivado2018v2/: ModuleTester.xpr
Vivado2018v2/ModuleTester.cache/wt/: webtalk_pa.xml
project_FINAL/: project_FINAL.xpr
project_final_128x128/: project_final_128x128.xpr
project_final_4x4/: project_new.xpr  vivado.jou
(+158 files in other folders)
